iac/k8s-config/argocd/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.iris.calebache.com`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
  tls:
    secretName: argocd-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-http-redirect
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`argocd.iris.calebache.com`)
      kind: Rule
      middlewares:
        - name: argocd-redirect-https
      services:
        - name: argocd-server
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: argocd-redirect-https
  namespace: argocd
spec:
  redirectScheme:
    scheme: https
    permanent: true
